--- a/resolv.conf
+++ b/resolv.conf
@@ -1,4 +1,4 @@
-____________________YOUTUBE -------------------
+____________________The Default DNS -------------------
 
 Preferred DNS Server: 208.67.222.222
 Alternate DNS Server: 208.67.222.220
